service.yml
apiVersion: v1
kind: Service
metadata:
  name: lab10-service
  namespace: lab10
spec:
  type: NodePort
  selector:
    app: lab10-server
  ports:
    - port: 80
      targetPort: 80
